# Swftly-POS-App

./: .env.example  .gitignore  ACCOUNTING_SYSTEM_DOCUMENTATION.md  ADMIN_ACCOUNT_INFO.md  AUTOMATIC_METADATA_README.md  BARCODE_SCANNING_README.md  CALENDAR_INTEGRATION_README.md  COMPLETE_SETUP_GUIDE.md  CUSTOMER_DISPLAY_README.md  DATABASE_CONSOLIDATION.md  FRONTEND_UPDATE.md  HYBRID_CATEGORIZATION_README.md  IMAGE_MATCHING_README.md  IMPLEMENTATION_SUMMARY.md  INSTALL_DEPENDENCIES.md  INSTALL_NOW.md  LICENSE  LOCAL_POSTGRES_SETUP.md  METADATA_EXTRACTION_README.md  METADATA_QUICK_START.md  MIGRATION_COMPLETE.md  MIGRATION_TO_LOCAL_POSTGRES.md  QUICK_SETUP_NEW_COMPUTER.md  QUICK_START.md  QUICK_SYNC.md  RBAC_README.md  README.md  README_SETUP.md  README_SHIPMENT_PROCESSOR.md  RUN_THIS_NOW.md  SCHEDULE_SYSTEM_README.md  SETUP_COMPLETE.md  SETUP_FOR_OTHER_COMPUTERS.md  SMS_CRM_SETUP.md  STRIPE_INTEGRATION_README.md  SUPABASE_FIX_INSTRUCTIONS.md  SUPABASE_ONLY_REFACTOR.md  SUPABASE_QUICK_START.md  SUPABASE_SETUP.md  SUPABASE_SETUP_GUIDE.md  (+99 more)
archive/: README.md  __init__.py  document_scraper_legacy.py
cench-realwebsite/: package-lock.json  package.json
docs/: CUSTOMER_VENDOR_STRATEGY.md  INVOICES_AND_SUPABASE_SETUP.md  PRODUCT_VARIANTS_AND_INGREDIENTS.md  SCHEMA_OWNERSHIP.md  SHIPMENT_DOCUMENT_PROCESSOR.md  SMS_TESTING.md  SUPABASE_SETUP.md  TAURI_DESKTOP_SETUP.md
frontend-mobile/: package-lock.json  package.json
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
(+195 files in other folders)
